chore: added colab link.

--- a/notebooks/TF_to_ONNX.ipynb
+++ b/notebooks/TF_to_ONNX.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sayakpaul/ml-deployment-k8s-fastapi/blob/main/notebooks/TF_to_ONNX.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ahaLOgxyzACW"
       },
       "source": [
@@ -26,28 +36,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "Y7VIFntKUh0R",
-        "outputId": "2a14821e-0096-45c3-8e97-81c28e00d43d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Y7VIFntKUh0R"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[K     |████████████████████████████████| 435 kB 13.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 12.8 MB 62.5 MB/s \n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "tensorflow 2.8.0 requires tf-estimator-nightly==2.8.0.dev2021122109, which is not installed.\u001b[0m\n",
-            "\u001b[K     |████████████████████████████████| 4.9 MB 12.6 MB/s \n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install -Uqq tf2onnx\n",
         "!pip install -Uqq onnxruntime"
@@ -64,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-UfszPPVf9P0"
       },
@@ -87,25 +80,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "3R81akF_hDEL",
-        "outputId": "c1078b0a-de22-449d-f3a6-9586bc26ba0d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "3R81akF_hDEL"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
-            "102973440/102967424 [==============================] - 0s 0us/step\n",
-            "102981632/102967424 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "core = tf.keras.applications.ResNet50(include_top=True, input_shape=(224, 224, 3))\n",
         "\n",
@@ -136,24 +115,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3-friv_fMk79",
-        "outputId": "e8b42513-0ca5-4d24-8986-03a2281dd93b"
+        "id": "3-friv_fMk79"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "first layer name: image_input\n",
-            "last layer name: resnet50\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "num_layers = len(model.layers)\n",
         "print(f'first layer name: {model.layers[0].name}')\n",
@@ -177,25 +143,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "id": "_MAEoy9j0QRQ",
-        "outputId": "daa393dd-7687-474c-a42a-16b450e01e82",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_MAEoy9j0QRQ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/tf2onnx/tf_loader.py:706: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import onnx\n",
         "\n",
@@ -227,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ceqZH2KbPznx"
       },
@@ -247,23 +199,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zL8Lw9H8QbT7",
-        "outputId": "ca8da3f4-ca00-45dd-a55e-72bfe7ae19e9"
+        "id": "zL8Lw9H8QbT7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 loop, best of 5: 3.41 s per loop\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%timeit\n",
         "model.predict(dummy_inputs)"
@@ -271,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "smFa5VWjTNLb"
       },
@@ -295,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "1ELVBwrn0-Cf"
       },
@@ -310,23 +250,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jszhyR15SJaE",
-        "outputId": "6220cb91-4aac-41c9-cf2f-caac3ed98ee5"
+        "id": "jszhyR15SJaE"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 loop, best of 5: 3.06 s per loop\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%timeit \n",
         "sess.run(None, {\"image_input\": np_dummy_inputs})"
@@ -334,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Ax6opk4ENmlK"
       },
@@ -360,7 +288,7 @@
       "metadata": {
         "id": "um99Uu4FBPrY"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +310,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "TF to ONNX.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
