update: comparison the two(Rest, gRPC) results

--- a/notebooks/TF_Serving.ipynb
+++ b/notebooks/TF_Serving.ipynb
@@ -11,7 +11,9 @@
         "This tutorial shows:\n",
         "- how to run TF Serving for a custom model in Docker container\n",
         "- how to request for predictions via both gRPC and RestAPI calls\n",
-        "- the prediction timing result from TF Serving"
+        "- the prediction timing result from TF Serving\n",
+        "\n",
+        "This notebook is written by referencing the [official TF Serving gRPC example](https://github.com/tensorflow/serving/blob/master/tensorflow_serving/example/resnet_k8s.yaml) and [official TF Serving RestAPI example](https://www.tensorflow.org/tfx/tutorials/serving/rest_simple)."
       ]
     },
     {
@@ -37,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "6lQVylcMXz9N"
       },
@@ -77,13 +79,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VysQtJQnXz9O",
-        "outputId": "d140b4e7-c31d-48ef-a211-743f3641b4fa"
+        "outputId": "c63abf81-65e7-48c9-9e71-d16108da2d2a"
       },
       "outputs": [
         {
@@ -91,8 +93,8 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
-            "102973440/102967424 [==============================] - 1s 0us/step\n",
-            "102981632/102967424 [==============================] - 1s 0us/step\n"
+            "102973440/102967424 [==============================] - 2s 0us/step\n",
+            "102981632/102967424 [==============================] - 2s 0us/step\n"
           ]
         }
       ],
@@ -122,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z9AmyovhXz9O",
-        "outputId": "7160d309-2392-4b9f-ea8a-85a9f721670f"
+        "outputId": "c26eadf0-e06e-45e4-a40d-e00b5343154e"
       },
       "outputs": [
         {
@@ -136,10 +138,10 @@
             "\n",
             "Saved model:\n",
             "total 4040\n",
-            "drwxr-xr-x 2 root root    4096 Mar 23 01:25 assets\n",
-            "-rw-r--r-- 1 root root  557217 Mar 23 01:25 keras_metadata.pb\n",
-            "-rw-r--r-- 1 root root 3565545 Mar 23 01:25 saved_model.pb\n",
-            "drwxr-xr-x 2 root root    4096 Mar 23 01:25 variables\n"
+            "drwxr-xr-x 2 root root    4096 Mar 23 07:32 assets\n",
+            "-rw-r--r-- 1 root root  557217 Mar 23 07:32 keras_metadata.pb\n",
+            "-rw-r--r-- 1 root root 3565545 Mar 23 07:32 saved_model.pb\n",
+            "drwxr-xr-x 2 root root    4096 Mar 23 07:32 variables\n"
           ]
         }
       ],
@@ -193,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lgzz06XoXz9Q",
-        "outputId": "f78b1898-8dd9-4345-e3ed-8276994ff8c5"
+        "outputId": "c51a85f9-c6bf-4e7e-f710-2a572fde45d6"
       },
       "outputs": [
         {
@@ -342,13 +344,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "loMcfbfTXz9S",
-        "outputId": "8a889561-c3dc-4647-9b39-9786ccf801c8"
+        "outputId": "0b18aed6-af3b-4e06-b5ae-e336305b0d5e"
       },
       "outputs": [
         {
@@ -359,7 +361,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 6
         }
       ],
       "source": [
@@ -384,21 +386,21 @@
       },
       "outputs": [],
       "source": [
-        "!echo \"deb http://storage.googleapis.com/tensorflow-serving-apt stable tensorflow-model-server tensorflow-model-server-universal\" | {SUDO_IF_NEEDED} tee /etc/apt/sources.list.d/tensorflow-serving.list && \\\n",
-        "curl https://storage.googleapis.com/tensorflow-serving-apt/tensorflow-serving.release.pub.gpg | {SUDO_IF_NEEDED} apt-key add -\n",
-        "!apt update"
+        "!echo \"deb http://storage.googleapis.com/tensorflow-serving-apt stable tensorflow-model-server tensorflow-model-server-universal\" | sudo tee /etc/apt/sources.list.d/tensorflow-serving.list && \\\n",
+        "curl https://storage.googleapis.com/tensorflow-serving-apt/tensorflow-serving.release.pub.gpg | sudo apt-key add -\n",
+        "!sudo apt update"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zSFmRRf2Xz9R"
-      },
-      "outputs": [],
       "source": [
-        "!apt-get install tensorflow-model-server"
-      ]
+        "!sudo apt-get install tensorflow-model-server"
+      ],
+      "metadata": {
+        "id": "u2HQb4q6sonS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -411,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 26,
       "metadata": {
         "id": "MH-RScSvXz9R"
       },
@@ -422,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 27,
       "metadata": {
         "id": "Mq4t5ozVXz9R"
       },
@@ -433,32 +435,29 @@
         "  --model_name=resnet_model \\\n",
         "  --model_base_path=$MODEL_DIR >server.log 2>&1 &\n",
         "\n",
+        "# add --enable_model_warmup option if you think your first call to the server is slow\n",
         "# --enable_model_warmup for warmup(https://www.tensorflow.org/tfx/serving/saved_model_warmup)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 28,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PVhTO53jXz9S",
-        "outputId": "b9c834ca-5cb2-454f-d3ec-6a58692cf1e1"
+        "id": "PVhTO53jXz9S"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[warn] getaddrinfo: address family for nodename not supported\n",
-            "[evhttp_server.cc : 245] NET_LOG: Entering the event loop ...\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!cat server.log"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Notice that two ports are exposed for listening both RestAPI(`8501`) and gRPC(`8500`)."
+      ],
+      "metadata": {
+        "id": "ea6V73oXzs3U"
+      }
     },
     {
       "cell_type": "code",
@@ -470,29 +469,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KumZ3xB4giEa",
-        "outputId": "416ecc38-6f49-4068-e687-3aa387ef5e67"
+        "outputId": "4302ee0a-994f-485a-c99b-4fa394068d64"
       },
-      "execution_count": 47,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "node         7 root   21u  IPv6  25571      0t0  TCP *:8080 (LISTEN)\n",
-            "colab-fil   29 root    5u  IPv6  25979      0t0  TCP *:3453 (LISTEN)\n",
-            "colab-fil   29 root    6u  IPv4  25980      0t0  TCP *:3453 (LISTEN)\n",
-            "jupyter-n   42 root    6u  IPv4  26715      0t0  TCP 172.28.0.2:9000 (LISTEN)\n",
-            "python3     60 root   15u  IPv4  29022      0t0  TCP 127.0.0.1:39987 (LISTEN)\n",
-            "python3     60 root   18u  IPv4  29026      0t0  TCP 127.0.0.1:36549 (LISTEN)\n",
-            "python3     60 root   21u  IPv4  29030      0t0  TCP 127.0.0.1:50817 (LISTEN)\n",
-            "python3     60 root   24u  IPv4  29034      0t0  TCP 127.0.0.1:53273 (LISTEN)\n",
-            "python3     60 root   30u  IPv4  29040      0t0  TCP 127.0.0.1:36879 (LISTEN)\n",
-            "python3     60 root   43u  IPv4  28245      0t0  TCP 127.0.0.1:33513 (LISTEN)\n",
-            "python3     80 root    3u  IPv4  29514      0t0  TCP 127.0.0.1:21925 (LISTEN)\n",
-            "python3     80 root    5u  IPv4  28630      0t0  TCP 127.0.0.1:45169 (LISTEN)\n",
-            "python3     80 root    9u  IPv4  29828      0t0  TCP 127.0.0.1:44481 (LISTEN)\n",
-            "tensorflo 1460 root    5u  IPv4  42970      0t0  TCP *:8500 (LISTEN)\n",
-            "tensorflo 1460 root   12u  IPv4  42975      0t0  TCP *:8501 (LISTEN)\n"
+            "node         7 root   21u  IPv6  25789      0t0  TCP *:8080 (LISTEN)\n",
+            "colab-fil   30 root    5u  IPv4  26644      0t0  TCP *:3453 (LISTEN)\n",
+            "colab-fil   30 root    6u  IPv6  26645      0t0  TCP *:3453 (LISTEN)\n",
+            "jupyter-n   43 root    6u  IPv4  25864      0t0  TCP 172.28.0.2:9000 (LISTEN)\n",
+            "python3     61 root   15u  IPv4  27814      0t0  TCP 127.0.0.1:50215 (LISTEN)\n",
+            "python3     61 root   18u  IPv4  27818      0t0  TCP 127.0.0.1:54779 (LISTEN)\n",
+            "python3     61 root   21u  IPv4  27822      0t0  TCP 127.0.0.1:40395 (LISTEN)\n",
+            "python3     61 root   24u  IPv4  27826      0t0  TCP 127.0.0.1:60517 (LISTEN)\n",
+            "python3     61 root   30u  IPv4  27832      0t0  TCP 127.0.0.1:40255 (LISTEN)\n",
+            "python3     61 root   43u  IPv4  28831      0t0  TCP 127.0.0.1:53235 (LISTEN)\n",
+            "python3     81 root    3u  IPv4  29267      0t0  TCP 127.0.0.1:15144 (LISTEN)\n",
+            "python3     81 root    5u  IPv4  28223      0t0  TCP 127.0.0.1:42197 (LISTEN)\n",
+            "python3     81 root    9u  IPv4  28356      0t0  TCP 127.0.0.1:41627 (LISTEN)\n",
+            "tensorflo 5933 root    5u  IPv4  66554      0t0  TCP *:8500 (LISTEN)\n",
+            "tensorflo 5933 root   12u  IPv4  66559      0t0  TCP *:8501 (LISTEN)\n"
           ]
         }
       ]
@@ -517,20 +516,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDw6gT7lXz9S",
-        "outputId": "a4b1398c-906e-4e8a-a7b2-b54994a5b5fa"
+        "outputId": "19e82468-1441-4dae-c514-9d8b78f53240"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Data: {\"signature_name\": \"serving_default\", \"instances\": ... 87132263, -1.264892816543579, 1.081931710243225]]]]}\n"
+            "Data: {\"signature_name\": \"serving_default\", \"instances\": ... 442383, 0.8007770776748657, -0.7472004890441895]]]]}\n"
           ]
         }
       ],
@@ -550,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 31,
       "metadata": {
         "id": "hh6vmxqnXz9T"
       },
@@ -570,15 +569,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS_DI5QpdZTg",
-        "outputId": "0a75e214-212d-4d97-e7bb-612203f9f5dd"
+        "outputId": "6b93ca46-1047-4b76-bd84-d21f95f9f4e9"
       },
-      "execution_count": 71,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 loop, best of 5: 5.91 s per loop\n"
+            "1 loop, best of 5: 4.11 s per loop\n"
           ]
         }
       ]
@@ -594,27 +593,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "brI4TCETXz9T",
-        "outputId": "a8b470fb-56fd-43fd-d4ef-1dd97ab063d5"
+        "outputId": "7a098027-fb8a-4bfd-96dc-0bf74d26af09"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction class: [851 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 851 664\n",
-            " 664 664 664 664 664 664 664 664 664 851 664 664 664 664]\n"
+            "Prediction class: [664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664\n",
+            " 664 664 664 664 664 664 664 851 664 664 851 664 664 664]\n"
           ]
         }
       ],
       "source": [
-        "predictions = json.loads(json_response.text)['predictions']\n",
-        "print('Prediction class: {}'.format(np.argmax(predictions, axis=-1)))"
+        "json_response = requests.post('http://localhost:8501/v1/models/resnet_model:predict', data=data, headers=headers)\n",
+        "rest_predictions = json.loads(json_response.text)['predictions']\n",
+        "print('Prediction class: {}'.format(np.argmax(rest_predictions, axis=-1)))"
       ]
     },
     {
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "Y1cxieBDfyjK"
       },
-      "execution_count": 39,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -668,7 +668,7 @@
       "metadata": {
         "id": "2QD8xK47emy5"
       },
-      "execution_count": 99,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -691,15 +691,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvslcT5_f4P6",
-        "outputId": "7f110776-c513-46ae-dbad-c441597be926"
+        "outputId": "e4a1008a-dad5-4f8f-a0f6-f9b68aa7db67"
       },
-      "execution_count": 100,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 loop, best of 5: 5.05 s per loop\n"
+            "1 loop, best of 5: 3.63 s per loop\n"
           ]
         }
       ]
@@ -716,28 +716,62 @@
     {
       "cell_type": "code",
       "source": [
-        "result_val = result.outputs['resnet50'].float_val\n",
-        "result_val = np.array(result_val).reshape(32, -1)\n",
-        "print('Prediction class: {}'.format(np.argmax(result_val, axis=-1)))"
+        "grpc_predictions = stub.Predict(request, 10.0)  # 10 secs timeout\n",
+        "grpc_predictions = grpc_predictions.outputs['resnet50'].float_val\n",
+        "grpc_predictions = np.array(grpc_predictions).reshape(32, -1)\n",
+        "print('Prediction class: {}'.format(np.argmax(grpc_predictions, axis=-1)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBfd4TG0f5z6",
-        "outputId": "5557cd52-64dd-44ef-d073-45ee0447323c"
+        "outputId": "ffc40a16-787e-4146-9c1e-27317d10867f"
       },
-      "execution_count": 101,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction class: [664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 851 664 664\n",
-            " 664 664 664 664 664 664 664 664 664 664 664 664 664 664]\n"
+            "Prediction class: [664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664\n",
+            " 664 664 664 664 664 664 664 851 664 664 851 664 664 664]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Compare the two results if they are identical"
+      ],
+      "metadata": {
+        "id": "_dVHrF1ksyAc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.testing.assert_allclose(rest_predictions, grpc_predictions, atol=1e-4)"
+      ],
+      "metadata": {
+        "id": "UA4iKEcpioc8"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusion\n",
+        "\n",
+        "gRPC call took about 3.64 seconds while RestAPI call took about 4.11 seconds on the data of the batch size of 32. This let use conclude that gRPC call is much faster than RestAPI. \n",
+        "\n",
+        "Also note that this is very close performance comparing to the ONNX inference without any Server framework involved. That means we can expect TF Serving with gRPC should be faster than ONNX hosted on FastAPI server framework since FastAPI is a python framework while TF Serving is C++ implementation."
+      ],
+      "metadata": {
+        "id": "9-UcGFM0z65y"
+      }
     },
     {
       "cell_type": "code",
@@ -745,7 +779,7 @@
         ""
       ],
       "metadata": {
-        "id": "UA4iKEcpioc8"
+        "id": "DbLQp2Do0k6H"
       },
       "execution_count": null,
       "outputs": []
