--- a/notebooks/TF_Serving.ipynb
+++ b/notebooks/TF_Serving.ipynb
@@ -27,15 +27,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q requests\n",
-        "!pip install -q tensorflow-serving-api"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "b-aGIWy8c2Ht"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -q requests\n",
+        "!pip install -q tensorflow-serving-api"
+      ]
     },
     {
       "cell_type": "code",
@@ -61,12 +61,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Model"
-      ],
       "metadata": {
         "id": "GoIj2728pLyw"
-      }
+      },
+      "source": [
+        "## Model"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -74,7 +74,9 @@
         "id": "3xmYCIWpXz9N"
       },
       "source": [
-        "### Get a sample model "
+        "### Get a sample model \n",
+        "\n",
+        "The target model is the plain `ResNet50` trained on ImageNet."
       ]
     },
     {
@@ -89,8 +91,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
             "102973440/102967424 [==============================] - 2s 0us/step\n",
@@ -113,7 +115,9 @@
         "id": "p3bC--0GXz9O"
       },
       "source": [
-        "### Save the model"
+        "### Save the model\n",
+        "\n",
+        "Below code saves the model under `MODEL_DIR`."
       ]
     },
     {
@@ -128,8 +132,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "export_path = /tmp/1\n",
             "\n",
@@ -176,16 +180,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "baanYnt8ohM7"
+      },
       "source": [
+        "TensorFlow comes with a handy `saved_model_cli` tool to investigate saved model.\n",
+        "\n",
         "Notice from `signature_def['serving_default']:` \n",
         "- the input name is `image_input`\n",
         "- the output name is `resnet50`\n",
         "\n",
         "You need to know these to make requests to the TF Serving server later"
-      ],
-      "metadata": {
-        "id": "baanYnt8ohM7"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -199,8 +205,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "MetaGraphDef with tag-set: 'serve' contains the following SignatureDefs:\n",
@@ -335,12 +341,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Create dummy data"
-      ],
       "metadata": {
         "id": "g4G_oWb_plDI"
-      }
+      },
+      "source": [
+        "### Create dummy data\n",
+        "\n",
+        "The dummy data is nothing but just contains random numbers in the batch size of 32."
+      ]
     },
     {
       "cell_type": "code",
@@ -354,14 +362,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "TensorShape([32, 224, 224, 3])"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -371,12 +379,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Install TF Serving tool"
-      ],
       "metadata": {
         "id": "ZBxKquAwpCEh"
-      }
+      },
+      "source": [
+        "### Install TF Serving tool"
+      ]
     },
     {
       "cell_type": "code",
@@ -393,23 +401,23 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!sudo apt-get install tensorflow-model-server"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "u2HQb4q6sonS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!sudo apt-get install tensorflow-model-server"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Run TF Serving server"
-      ],
       "metadata": {
         "id": "jn9oNYM7pYcv"
-      }
+      },
+      "source": [
+        "### Run TF Serving server"
+      ]
     },
     {
       "cell_type": "code",
@@ -423,8 +431,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "`saved_model_cli` CLI accepts a set of options.\n",
+        "- `--rest_api_port` exposes additional port for RestAPI. By default `8500` is exposed as gRPC.\n",
+        "- `--model_name` lets TF Serving to identify which model to access. You can visually see this in the RestAPI's URI.\n",
+        "- `--enable_model_warmup` \n",
+        "  - The TensorFlow runtime has components that are lazily initialized, which can cause high latency for the first request/s sent to a model after it is loaded. To reduce the impact of lazy initialization on request latency, it's possible to trigger the initialization of the sub-systems and components at model load time by providing a sample set of inference requests along with the SavedModel. This process is known as \"warming up\" the model.\n",
+        "  - To trigger warmup of the model at load time, attach a warmup data file under the assets.extra subfolder of the SavedModel directory.\n",
+        "  - `--enable_model_warmup` option triggers this process.\n",
+        "  - for further information, please look at the [official document](https://www.tensorflow.org/tfx/serving/saved_model_warmup?hl=en)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "Mq4t5ozVXz9R"
       },
@@ -435,7 +457,6 @@
         "  --model_name=resnet_model \\\n",
         "  --model_base_path=$MODEL_DIR >server.log 2>&1 &\n",
         "\n",
-        "# add --enable_model_warmup option if you think your first call to the server is slow\n",
         "# --enable_model_warmup for warmup(https://www.tensorflow.org/tfx/serving/saved_model_warmup)"
       ]
     },
@@ -452,18 +473,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Notice that two ports are exposed for listening both RestAPI(`8501`) and gRPC(`8500`)."
-      ],
       "metadata": {
         "id": "ea6V73oXzs3U"
-      }
+      },
+      "source": [
+        "Notice that two ports are exposed for listening both RestAPI(`8501`) and gRPC(`8500`)."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!sudo lsof -i -P -n | grep LISTEN"
-      ],
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -471,11 +490,10 @@
         "id": "KumZ3xB4giEa",
         "outputId": "4302ee0a-994f-485a-c99b-4fa394068d64"
       },
-      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "node         7 root   21u  IPv6  25789      0t0  TCP *:8080 (LISTEN)\n",
             "colab-fil   30 root    5u  IPv4  26644      0t0  TCP *:3453 (LISTEN)\n",
@@ -494,25 +512,28 @@
             "tensorflo 5933 root   12u  IPv4  66559      0t0  TCP *:8501 (LISTEN)\n"
           ]
         }
+      ],
+      "source": [
+        "!sudo lsof -i -P -n | grep LISTEN"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## RestAPI request"
-      ],
       "metadata": {
         "id": "mvHRnTmppqn9"
-      }
+      },
+      "source": [
+        "## RestAPI request"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Convert dummy data in JSON format"
-      ],
       "metadata": {
         "id": "1QNMoU3qq2fN"
-      }
+      },
+      "source": [
+        "### Convert dummy data in JSON format"
+      ]
     },
     {
       "cell_type": "code",
@@ -526,8 +547,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Data: {\"signature_name\": \"serving_default\", \"instances\": ... 442383, 0.8007770776748657, -0.7472004890441895]]]]}\n"
           ]
@@ -540,12 +561,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Make a request"
-      ],
       "metadata": {
         "id": "hzlArynZq-dF"
-      }
+      },
+      "source": [
+        "### Make a request"
+      ]
     },
     {
       "cell_type": "code",
@@ -560,10 +581,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "json_response = requests.post('http://localhost:8501/v1/models/resnet_model:predict', data=data, headers=headers)"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -571,25 +589,29 @@
         "id": "fS_DI5QpdZTg",
         "outputId": "6b93ca46-1047-4b76-bd84-d21f95f9f4e9"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1 loop, best of 5: 4.11 s per loop\n"
           ]
         }
+      ],
+      "source": [
+        "%%timeit\n",
+        "json_response = requests.post('http://localhost:8501/v1/models/resnet_model:predict', \n",
+        "                              data=data, headers=headers)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Interpret the output"
-      ],
       "metadata": {
         "id": "_n8urXddrJp0"
-      }
+      },
+      "source": [
+        "### Interpret the output"
+      ]
     },
     {
       "cell_type": "code",
@@ -603,8 +625,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Prediction class: [664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664\n",
             " 664 664 664 664 664 664 664 851 664 664 851 664 664 664]\n"
@@ -612,80 +634,78 @@
         }
       ],
       "source": [
-        "json_response = requests.post('http://localhost:8501/v1/models/resnet_model:predict', data=data, headers=headers)\n",
+        "json_response = requests.post('http://localhost:8501/v1/models/resnet_model:predict', \n",
+        "                              data=data, headers=headers)\n",
         "rest_predictions = json.loads(json_response.text)['predictions']\n",
         "print('Prediction class: {}'.format(np.argmax(rest_predictions, axis=-1)))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## gRPC request"
-      ],
       "metadata": {
         "id": "lwuaqGVud58k"
-      }
+      },
+      "source": [
+        "## gRPC request"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Open up gRPC channel"
-      ],
       "metadata": {
         "id": "yr7vO8BQrP2S"
-      }
+      },
+      "source": [
+        "### Open up gRPC channel"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "channel = grpc.insecure_channel('localhost:8500')\n",
-        "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)"
-      ],
+      "execution_count": 37,
       "metadata": {
         "id": "Y1cxieBDfyjK"
       },
-      "execution_count": 37,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "channel = grpc.insecure_channel('localhost:8500')\n",
+        "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Prepare a request"
-      ],
       "metadata": {
         "id": "fS5b0VVfrTmF"
-      }
+      },
+      "source": [
+        "### Prepare a request"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "2QD8xK47emy5"
+      },
+      "outputs": [],
       "source": [
         "request = predict_pb2.PredictRequest()\n",
         "request.model_spec.name = 'resnet_model'\n",
         "request.model_spec.signature_name = 'serving_default'\n",
         "request.inputs['image_input'].CopyFrom(\n",
         "    tf.make_tensor_proto(dummy_inputs)) #, shape=[32,224,224,3]))"
-      ],
-      "metadata": {
-        "id": "2QD8xK47emy5"
-      },
-      "execution_count": 38,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Make a request"
-      ],
       "metadata": {
         "id": "7UztXjZGrYTf"
-      }
+      },
+      "source": [
+        "### Make a request"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "result = stub.Predict(request, 10.0)  # 10 secs timeout"
-      ],
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -693,34 +713,32 @@
         "id": "wvslcT5_f4P6",
         "outputId": "e4a1008a-dad5-4f8f-a0f6-f9b68aa7db67"
       },
-      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1 loop, best of 5: 3.63 s per loop\n"
           ]
         }
+      ],
+      "source": [
+        "%%timeit\n",
+        "result = stub.Predict(request, 10.0)  # 10 secs timeout"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Interpret the output"
-      ],
       "metadata": {
         "id": "o52MnidprdCY"
-      }
+      },
+      "source": [
+        "### Interpret the output"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "grpc_predictions = stub.Predict(request, 10.0)  # 10 secs timeout\n",
-        "grpc_predictions = grpc_predictions.outputs['resnet50'].float_val\n",
-        "grpc_predictions = np.array(grpc_predictions).reshape(32, -1)\n",
-        "print('Prediction class: {}'.format(np.argmax(grpc_predictions, axis=-1)))"
-      ],
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -728,64 +746,75 @@
         "id": "TBfd4TG0f5z6",
         "outputId": "ffc40a16-787e-4146-9c1e-27317d10867f"
       },
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Prediction class: [664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664 664\n",
             " 664 664 664 664 664 664 664 851 664 664 851 664 664 664]\n"
           ]
         }
+      ],
+      "source": [
+        "grpc_predictions = stub.Predict(request, 10.0)  # 10 secs timeout\n",
+        "grpc_predictions = grpc_predictions.outputs['resnet50'].float_val\n",
+        "grpc_predictions = np.array(grpc_predictions).reshape(32, -1)\n",
+        "print('Prediction class: {}'.format(np.argmax(grpc_predictions, axis=-1)))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Compare the two results if they are identical"
-      ],
       "metadata": {
         "id": "_dVHrF1ksyAc"
-      }
+      },
+      "source": [
+        "## Compare the two results if they are identical\n",
+        "\n",
+        "`np.testing.assert_allclose` raises exception when the given two arrays do not match exactly."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.testing.assert_allclose(rest_predictions, grpc_predictions, atol=1e-4)"
-      ],
+      "execution_count": 41,
       "metadata": {
         "id": "UA4iKEcpioc8"
       },
-      "execution_count": 41,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "np.testing.assert_allclose(rest_predictions, grpc_predictions, atol=1e-4)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9-UcGFM0z65y"
+      },
       "source": [
         "## Conclusion\n",
         "\n",
         "gRPC call took about 3.64 seconds while RestAPI call took about 4.11 seconds on the data of the batch size of 32. This let use conclude that gRPC call is much faster than RestAPI. \n",
         "\n",
         "Also note that this is very close performance comparing to the ONNX inference without any Server framework involved. That means we can expect TF Serving with gRPC should be faster than ONNX hosted on FastAPI server framework since FastAPI is a python framework while TF Serving is C++ implementation."
-      ],
-      "metadata": {
-        "id": "9-UcGFM0z65y"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DbLQp2Do0k6H"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "TF_Serving.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
     "interpreter": {
       "hash": "626869861cd3ed4fdbaf755d0ab61c53ee2a93056f2b69c4f7170d3cc24dc5ea"
     },
@@ -806,13 +835,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.12"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "TF_Serving.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
